Add scenario for a release requiring re-approval
Signed-off-by: Andi Studer <andi.studer@fundingcircle.com>

--- a/app/views/releases/show.html.haml
+++ b/app/views/releases/show.html.haml
@@ -20,7 +20,7 @@
       %th{width: '35%'} feature reviews
   %tbody
   - @pending_releases.each do |release|
-    %tr.pending-release{class: ('danger' unless release.approved?)}
+    %tr.pending-release{class: ('danger' unless release.authorised?)}
       %td.monospace= commit_link(release.version, @github_repo_url)
       %td= pull_request_link(release.subject, @github_repo_url).html_safe
       %td
@@ -38,7 +38,7 @@
       %th{width: '20%'} last deployed at
   %tbody
   - @deployed_releases.each do |release|
-    %tr.deployed-release{class: ('danger' unless release.approved?)}
+    %tr.deployed-release{class: ('danger' unless release.authorised?)}
       %td.monospace= commit_link(release.version, @github_repo_url)
       %td= pull_request_link(release.subject, @github_repo_url).html_safe
       %td
