--- a/app/views/feature_reviews/show.html.haml
+++ b/app/views/feature_reviews/show.html.haml
@@ -9,7 +9,7 @@
 
 .row
   .col-lg-12
-    - panel(heading: feature_status(@feature_review_with_statuses), status: @feature_review_with_statuses.approval_status, klass: 'feature-status', help_url: wiki_links(:approve), align_right: true) do
+    - panel(heading: feature_status(@feature_review_with_statuses), status: @feature_review_with_statuses.authorisation_status, klass: 'feature-status', help_url: wiki_links(:approve), align_right: true) do
       - if @feature_review_with_statuses.tickets.empty?
         .panel-body
           No tickets found
@@ -21,8 +21,8 @@
               %td= jira_link(ticket.key)
               %td= ticket.summary
               %td
-                - icon(item_status_icon_class(ticket.approved?))
-                = ticket.status
+                - icon(item_status_icon_class(ticket.authorised?(@feature_review_with_statuses.versions)))
+                = ticket.authorisation_status(@feature_review_with_statuses.versions)
 
 .row
   .col-lg-6
