Move Git validations from model to form
Introduces extra validations of URI and repo accessibility.

Signed-off-by: Oleksandr Kruk <oleksandr.kruk@fundingcircle.com>

--- a/app/views/git_repository_locations/index.html.haml
+++ b/app/views/git_repository_locations/index.html.haml
@@ -1,6 +1,6 @@
 - title 'Repositories'
 
-= form_for(@new_git_repository_location, class: 'form-horizontal') do |form|
+= form_for(@repo_location_form, url: git_repository_locations_path, class: 'form-horizontal') do |form|
   .form-group.row
     = form.label(:uri, 'Git URI', class: 'col-md-1 control-label')
     .col-md-4
