--- a/app/views/git_repository_locations/index.html.haml
+++ b/app/views/git_repository_locations/index.html.haml
@@ -1,6 +1,6 @@
 - title 'Repositories'
 
-= form_for(@repo_location_form, url: git_repository_locations_path, class: 'form-horizontal') do |form|
+= form_for('repository_locations_form', url: git_repository_locations_path, class: 'form-horizontal') do |form|
   .form-group.row
     = form.label(:uri, 'Git URI', class: 'col-md-1 control-label')
     .col-md-4
@@ -17,7 +17,6 @@
   .form-group.row
     .col-md-offset-1.col-md-4
       = form.submit('Add Git Repository', class: 'btn btn-primary')
-
 
 - table headers: ['Name', 'URI'], classes: 'git_repository_locations' do
   - @git_repository_locations.each do |git_repository_location|
