Add link to tokens page on the successful flash message
Improve copy for successful repository added message

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -43,7 +43,7 @@
       - if flash[:warning] # the yellow one
         .alert.alert-warning= flash[:warning]
       - if flash[:success] # the green one
-        .alert.alert-success= flash[:success]
+        .alert.alert-success= flash[:success].html_safe
       - if flash[:info] # the blue one
         .alert.alert-info= flash[:info]
       = yield
