--- a/app/views/feature_reviews/show.html.haml
+++ b/app/views/feature_reviews/show.html.haml
@@ -10,14 +10,7 @@
 .row
   .col-lg-12
     - panel(heading: feature_status(@feature_review_with_statuses), status: @feature_review_with_statuses.authorisation_status, klass: 'feature-status', help_url: wiki_links(:approve), align_right: true) do
-      - if @feature_review_with_statuses.tickets.empty?
-        .panel-body
-          = form_tag(link_ticket_feature_reviews_path(return_to: @return_to), method: 'post', class: 'form-inline') do
-            .form-group
-              = label_tag('jira_key', 'Link Jira Ticket:', class: 'control-label')
-              = text_field_tag('jira_key', '', placeholder: 'e.g: ENG-123', class: 'form-control input-sm', required: true)
-            = submit_tag('Link', class: 'btn btn-primary btn-sm')
-      - else
+      - if @feature_review_with_statuses.tickets.any?
         - table(headers: %w(Ticket Summary Status)) do
           - @feature_review_with_statuses.tickets.each do |ticket|
             %tr.ticket
@@ -26,7 +19,12 @@
               %td
                 - icon(item_status_icon_class(ticket.authorised?(@feature_review_with_statuses.versions)))
                 = ticket.authorisation_status(@feature_review_with_statuses.versions)
-
+      .panel-body
+        = form_tag(link_ticket_feature_reviews_path(return_to: @return_to), method: 'post', class: 'form-inline') do
+          .form-group
+            = label_tag('jira_key', 'Link Jira Ticket:', class: 'control-label')
+            = text_field_tag('jira_key', '', placeholder: 'e.g: ENG-123', class: 'form-control input-sm', required: true)
+          = submit_tag('Link', class: 'btn btn-primary btn-sm')
 .row
   .col-lg-6
     - panel(heading: 'Summary', status: @feature_review_with_statuses.summary_status, klass: 'summary') do
