--- a/app/views/git_repository_locations/index.html.haml
+++ b/app/views/git_repository_locations/index.html.haml
@@ -4,7 +4,7 @@
   .form-group.row
     = form.label(:uri, 'Git URI', class: 'col-md-1 control-label')
     .col-md-4
-      = form.text_field(:uri, placeholder: 'git@github.com:user/repo.git', class: 'form-control')
+      = form.text_field(:uri, placeholder: 'git@github.com:owner/repo.git', class: 'form-control')
   .form-group.row
     %label.col-md-1.control-label Tokens
     .col-md-2
