Add deployed info to released tickets
Signed-off-by: Andi Studer <andi.studer@fundingcircle.com>

--- a/app/views/home/dashboard.html.haml
+++ b/app/views/home/dashboard.html.haml
@@ -24,3 +24,5 @@
               %p
               %p.key
                 = jira_link(ticket.key)
+              - ticket.deploys.each do |deploy|
+                %p.deploy= "#{deploy['deployed_at']} #{deploy['app']}"
