--- a/app/views/home/dashboard.html.haml
+++ b/app/views/home/dashboard.html.haml
@@ -25,4 +25,6 @@
               %p.key
                 = jira_link(ticket.key)
               - ticket.deploys.each do |deploy|
-                %p.deploy= "#{deploy['deployed_at']} #{deploy['app']}"
+                %p.deploy
+                  = "#{deploy['deployed_at']} #{deploy['app']}"
+                  = "#{commit_link(deploy['version'], deploy['github_url'])}".html_safe
