--- a/app/views/home/dashboard.html.haml
+++ b/app/views/home/dashboard.html.haml
@@ -1,11 +1,9 @@
-- title 'Manifest'
-%p
-  Find releases.
+- title 'Feature Reviewed Tickets'
 %form.form-inline{"accept-charset" => "UTF-8", :action => "/", :method => "get"}
   %input{:name => "preview", :type => "hidden", :value => "true"}/
   .form-group
     %label.control-label.sr-only{:for => "q"} Search for deployed tickets:
-    %input#jira_key.form-control{:name => "q", :placeholder => "keywords in ticket description", :required => "required", :style => "width:700px;", :type => "text", :value => @query}/
+    %input#jira_key.form-control{:name => "q", :placeholder => "Search for app name, title, or description", :required => "required", :style => "width:700px;", :type => "text", :value => @query}/
   %input.btn.btn-primary{:type => "submit", :value => "Search"}/
 
 - if @query
@@ -18,15 +16,19 @@
       - tickets_row.compact.each do | ticket |
         .col-md-4
           .panel.panel-default.result
-            .panel-heading.summary
-              = jira_link(ticket.key)
-              %strong= ticket.summary
+            .panel-heading
+              %span.key= jira_link(ticket.key)
+              %strong.summary= truncate(ticket.summary, length: 100, seperator: ' ')
             .panel-body
-              = simple_format(truncate(ticket.description, length: 250, seperator: ' '), class: 'description')
+              - if ticket.description.nil?
+                %em.description No description found.
+              - else
+                = simple_format(truncate(ticket.description, length: 250, seperator: ' '), class: 'description')
               %p
-              - if ticket.deploys.any?
-                %br
-                %h2 Deploys
+                %hr
+                %b Deploys
+              - if ticket.deploys.empty?
+                %p none
               - ticket.deploys.each do |deploy|
                 %p.deploy
                   = flag_icon(deploy['region'].to_sym)
