update param nameing, fix integration tests
Signed-off-by: Oleksandr Kruk <oleksandr.kruk@fundingcircle.com>

--- a/app/views/home/dashboard.html.haml
+++ b/app/views/home/dashboard.html.haml
@@ -4,8 +4,8 @@
   .form-group
     %label.control-label.sr-only{:for => "q"} Search for deployed tickets:
     %input#q.form-control{:name => "q", :placeholder => "keywords in ticket description", :required => "required", :style => "width:700px;", :type => "text", :value => @query}/
-    %input#from_date.form-control{:name => "from_date", :value => @from_date }
-    %input#to_date.form-control{:name => "to_date", :value => @to_date }
+    %input#from_date.form-control{:name => "from", :value => @from_date }
+    %input#to_date.form-control{:name => "to", :value => @to_date }
   %input.btn.btn-primary{:type => "submit", :value => "Search"}/
 
 - if @query
