--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -98,7 +98,11 @@ h1 a.glyphicon {
 }
 
 .panel-body {
-    word-break: break-word;
+  word-break: break-word;
+}
+
+strong.summary {
+  word-break: break-word;
 }
 
 .icon-arrow-left {
