Update links to wiki
Note that the help icon from the QA panel has been removed. This panel
is now documented on the overall page for Feature Reviews, that is, the
1.-FEATURE-REVIEWS page.

--- a/app/views/feature_reviews/new.html.haml
+++ b/app/views/feature_reviews/new.html.haml
@@ -1,4 +1,4 @@
-- title 'Prepare feature for review', help_url: wiki_links(:prepare)
+- title 'Prepare feature for review', help_url: wiki_links(:prepare_fr)
 
 %p
   Specify the software versions for all the affected applications, then specify the UAT URL if you have or
