--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,12 +88,6 @@ h1 a.glyphicon {
   @extend .glyphicon-alert;
 }
 
-#new_token {
-  margin-bottom: 15px;
-
-  label, select, input { margin: 5px; }
-}
-
 .monospace {
   font-family: "Courier New", monospace;
 }
@@ -115,4 +109,15 @@ strong.summary {
   &:before {
     content: ">";
   }
+}
+
+#new_token {
+  margin-bottom: 15px;
+
+  label, select, input { margin: 5px; }
+}
+
+#query_msg {
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
