--- a/app/views/feature_reviews/show.html.haml
+++ b/app/views/feature_reviews/show.html.haml
@@ -48,11 +48,14 @@
 
   .col-lg-6
     - panel(heading: 'Apps Under Review', klass: 'app-info', button_link: { text: 'Modify', url: edit_url(@feature_review_with_statuses.app_versions, @feature_review_with_statuses.uat_host)}) do
+      - table(headers: %w(App Commit Author Time)) do
+        - @feature_review_with_statuses.app_versions_with_commits.each do |app_name, version, commits|
+          %tr
+            %td= app_name
+            %td= commit_link(commits.first.id, @feature_review_with_statuses.github_repo_urls[app_name])
+            %td= commits.first.author_name
+            %td= commits.first.time
       %ul.list-group
-        - @feature_review_with_statuses.app_versions.each do |app_name, version|
-          %li.list-group-item.app
-            %strong.name= app_name
-            %span.version.monospace= commit_link(version, @feature_review_with_statuses.github_repo_urls[app_name])
         %li.list-group-item
           - if @feature_review_with_statuses.uat_url
             Deployed to UAT
