--- a/config/database.yml.erb
+++ b/config/database.yml.erb
@@ -4,5 +4,8 @@
   host: <%= ENV.fetch('SHIPMENT_TRACKER_DATABASE_HOST') %>
   password: <%= ENV.fetch('SHIPMENT_TRACKER_DATABASE_PASSWORD') %>
   pool: 8
+  host: 'localhost'
+  port: 54617
+  username: 'postgres'
   timeout: 5000
   username: <%= ENV.fetch('SHIPMENT_TRACKER_DATABASE_USERNAME') %>
