--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -40,7 +40,7 @@
                     %br
                     %br
                     %p
-                      %b Deploys
+                      %strong Deploys
                       - if deployed_commit.deploys.empty?
                         %p none
                       - deployed_commit.deploys.each do |deploy|
