--- a/app/views/feature_reviews/show.html.haml
+++ b/app/views/feature_reviews/show.html.haml
@@ -49,13 +49,12 @@
   .col-lg-6
     - panel(heading: 'Apps Under Review', klass: 'app-info', button_link: { text: 'Modify', url: edit_url(@feature_review_with_statuses.app_versions, @feature_review_with_statuses.uat_host)}) do
       - table(headers: %w(App Commit Author Time)) do
-        - @feature_review_with_statuses.app_versions_with_commits.each do |app_name, version, commits|
-          - merge_commit = commits.first # NOTE: it might be a non-merge commit too
+        - @feature_review_with_statuses.apps_with_latest_commit.each do |app_name, latest_commit|
           %tr
             %td= app_name
-            %td= commit_link(merge_commit.id, @feature_review_with_statuses.github_repo_urls[app_name])
-            %td= merge_commit.author_name
-            %td= merge_commit.time
+            %td= commit_link(latest_commit.id, @feature_review_with_statuses.github_repo_urls[app_name])
+            %td= latest_commit.author_name
+            %td= latest_commit.time
       %ul.list-group
         %li.list-group-item
           - if @feature_review_with_statuses.uat_url
