--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,9 +66,9 @@ h1 a.glyphicon {
   }
 }
 
-.qa-submission {
-  .qa-accept,
-  .qa-reject {
+.feature-review-form {
+  .feature-review-accept,
+  .feature-review-reject {
     margin-bottom: 12px;
   }
 }
