--- a/app/views/feature_reviews/show.html.haml
+++ b/app/views/feature_reviews/show.html.haml
@@ -45,6 +45,10 @@
           %strong
             - icon(item_status_icon_class(@feature_review_with_statuses.uatest_status))
             %span.title User Acceptance Tests
+        %li.list-group-item
+          %strong
+            - icon(item_status_icon_class(@feature_review_with_statuses.release_exception_status))
+            %span.title Repo Owner Commentary
 
   .col-lg-6
     - panel(heading: 'Apps Under Review', klass: 'app-info', button_link: { text: 'Modify', url: edit_url(@feature_review_with_statuses.app_versions, @feature_review_with_statuses.uat_host)}) do
@@ -110,16 +114,16 @@
           - @feature_review_with_statuses.app_versions.each do |app_name, version|
             = hidden_field_tag('apps[][name]', app_name)
             = hidden_field_tag('apps[][version]', version)
-          %label.radio-inline.qa-accept
+          %label.radio-inline.feature-review-accept
             = radio_button_tag 'status', 'success', false, required: true
             Accept
-          %label.radio-inline.qa-reject
+          %label.radio-inline.feature-review-reject
             = radio_button_tag 'status', 'failed', false, required: true
             Reject
           .form-group
-            = label_tag('comment', 'Comment', class: 'control-label sr-only')
+            = label_tag('comment', 'Comment', class: 'control-label sr-only', id: 'qa-comment')
             = text_area_tag('comment', '', placeholder: 'Comment', class: 'form-control', required: true, rows: 4)
-          = submit_tag('Submit', class: 'btn btn-primary')
+          = submit_tag('Submit', class: 'btn btn-primary', id: '#qa-submit')
   .col-lg-6
     - panel(heading: 'User Acceptance Tests', klass: 'uatest', status: @feature_review_with_statuses.uatest_status) do
       .panel-body
@@ -130,3 +134,30 @@
           Could not find User Acceptance Tests that ran against expected UAT
           = "(#{@feature_review_with_statuses.uat_url})" if @feature_review_with_statuses.uat_url
           with the app versions that are under review.
+  .col-lg-6
+    - panel(heading: 'Repo Owner Commentary', klass: 'release-exception', status: @feature_review_with_statuses.release_exception_status) do
+      .panel-body
+        - if @feature_review_with_statuses.release_exception
+          %p
+            %span.repo-owner-email
+              %strong= format_owner_emails([@feature_review_with_statuses.release_exception.repo_owner])
+            at
+            %span.repo-owner-time= @feature_review_with_statuses.release_exception.submitted_at
+          = simple_format(@feature_review_with_statuses.release_exception.comment, class: 'repo-owner-comment')
+        - else
+          No unapproved deployment exception explanation by a Repo Owner
+      .panel-footer
+        = form_tag(events_path(type: 'release_exception', return_to: @return_to), method: 'post') do
+          - @feature_review_with_statuses.app_versions.each do |app_name, version|
+            = hidden_field_tag('apps[][name]', app_name)
+            = hidden_field_tag('apps[][version]', version)
+          %label.radio-inline.feature-review-accept
+            = radio_button_tag 'status', 'approved', false, required: true
+            Approve
+          %label.radio-inline.feature-review-reject
+            = radio_button_tag 'status', 'declined', false, required: true
+            Decline
+          .form-group
+            = label_tag('comment', 'Comment', class: 'control-label sr-only')
+            = text_area_tag('comment', '', placeholder: 'Comment', class: 'form-control', required: true, rows: 4)
+          = submit_tag('Submit', class: 'btn btn-primary')
