Add feature reviews to unapproved releases page

--- a/app/views/releases/index.html.haml
+++ b/app/views/releases/index.html.haml
@@ -8,4 +8,4 @@
         %li
           = link_to 'Pending and Deployed Releases', release_path(app_name)
         %li
-          = link_to 'Unapproved Releases and Release Exception', unapproved_deployment_path(app_name)
+          = link_to 'Unapproved Releases and Release Exceptions', unapproved_deployment_path(app_name)
