Improve QA comments margins

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -122,3 +122,11 @@ strong.summary {
 .unapproved-deploys-form {
   margin-top: 30px;
 }
+
+.qa-comments-list{
+  list-style-type: none;
+}
+
+.qa-comment {
+  margin-top: 15px;
+}
