--- a/app/views/feature_reviews/show.html.haml
+++ b/app/views/feature_reviews/show.html.haml
@@ -99,7 +99,7 @@
     - panel(heading: 'QA Acceptance', klass: 'qa-submission', status: @feature_review_with_statuses.qa_status) do
       .panel-body
         - if @feature_review_with_statuses.qa_submissions.present?
-          %ul.list-group{ style: 'list-style-type: none;' }
+          %ul.list-group.qa-comments-list
             - @feature_review_with_statuses.qa_submissions.each do |qa_submission|
               %li
                 %p
@@ -108,8 +108,8 @@
                     %strong= qa_submission.email
                   at
                   %span.qa-time= qa_submission.created_at
-                - qa_submission.versions.each do |version|
-                  = commit_link(version, @feature_review_with_statuses.app_url_for_version(version))
+                - version_links = qa_submission.versions.map { |version| commit_link(version, @feature_review_with_statuses.app_url_for_version(version)) }
+                = raw version_links.compact.join(' | ')
                 = simple_format(qa_submission.comment, class: 'qa-comment')
 
                 - unless qa_submission == @feature_review_with_statuses.qa_submissions.last
