Add an event for updating of required checks
Add specs for git repository location related classes

This adds/updates the specs and factories for:
- GitRepositoryLocation
- EditGitRepositoryLocationForm
- GitRepositoryLocationEvent
- GitRepositoryLocation snapshot
- GitRepoLocationRepository

Add integration tests for required checks

--- a/app/views/git_repository_locations/edit.html.haml
+++ b/app/views/git_repository_locations/edit.html.haml
@@ -16,8 +16,8 @@
     - GitRepositoryLocation::REQUIRED_CHECKS.each do |check|
       .checkbox
         %label
-          = check_box_tag 'required_checks', check, @form.git_repository_location.required_checks.include?(check), name: 'forms_edit_git_repository_location_form[required_checks][]'
-          = check
+          = check_box_tag check, check, @form.git_repository_location.required_checks.include?(check), name: 'forms_edit_git_repository_location_form[required_checks][]'
+          = check.titlecase
 
   .form-group
     = f.submit('Update Git Repository', class: 'btn btn-primary')
